@@ -65,6 +65,12 @@ cdef class IntSet:
     def __len__(self):
         return self._count
 
+    def __sizeof__(self):
+        my_size = (sizeof(Py_ssize_t)*2 + sizeof(int) + sizeof(int_type*))
+        if self._array != NULL:
+            my_size += (sizeof(int_type) * (self._mask + 1))
+        return my_size
+
     def _peek_array(self):
         cdef Py_ssize_t i, size
         if self._array == NULL:
